indus/test/test_examples/type_errors/local_dec_for.tpc
tele bool[10] l;
init {
   bool x = true;
   for (x in l) {
      
   }
} 
telemetry {} 
check {}